Update index.html and create new recipe
Index.html is updated to link the new recipe file that was created
(chickennachos.html). Chickennachos.html was formatted exactly like
eggfriedrice.html (title, headers for description, ingredients, steps,
and parapraph tags). Only the recipe was changed.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="../odin-recipes/recipes/eggfriedrice.html">Egg Fried Rice</a>
         </li>
        <li>
-
+            <a href="../odin-recipes/recipes/chickennachos.html">Restaurant Style Chicken Nachos</a>
        </li>
        
     </ul>
