Update index.html and create new recipe
Index.html is updated to link the new recipe file that was created
(scrambledeggmuffins.html). Scrambledeggmuffins.html was formatted
exactly like eggfriedrice.html (title, headers for description,
ngredients, steps, and parapraph tags). Only the recipe was changed.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
         <li>
             <a href="../odin-recipes/recipes/eggfriedrice.html">Egg Fried Rice</a>
         </li>
-       <li>
+       
+        <li>
             <a href="../odin-recipes/recipes/chickennachos.html">Restaurant Style Chicken Nachos</a>
        </li>
        
+       <li>
+           <a href="../odin-recipes/recipes/scrambledeggmuffins.html">Scrambled Egg Muffins</a>
+        </li>
     </ul>
 </body>
 </html>
