--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,15 +12,15 @@
 
     <ul>
         <li>
-            <a href="../odin-recipes/recipes/eggfriedrice.html">Egg Fried Rice</a>
+            <a href="./recipes/eggfriedrice.html">Egg Fried Rice</a>
         </li>
        
         <li>
-            <a href="../odin-recipes/recipes/chickennachos.html">Restaurant Style Chicken Nachos</a>
+            <a href="./recipes/chickennachos.html">Restaurant Style Chicken Nachos</a>
        </li>
        
        <li>
-           <a href="../odin-recipes/recipes/scrambledeggmuffins.html">Scrambled Egg Muffins</a>
+           <a href="./recipes/scrambledeggmuffins.html">Scrambled Egg Muffins</a>
         </li>
     </ul>
 </body>
