--- a/recipes/scrambledeggmuffins.html
+++ b/recipes/scrambledeggmuffins.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Scrambled Egg Muffins</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9203224.jpg&w=937&h=937&c=sc&poi=face&q=60" alt="Scrambled Egg Muffins">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9203224.jpg&w=937&h=937&c=sc&poi=face&q=60" alt="Scrambled Egg Muffins" width="300" height="200">
 
     <h2>Description</h2>
         <p>
